--- a/index.html
+++ b/index.html
@@ -4,106 +4,110 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sistem Informasi Jadwal Mata Kuliah</title>
-  <meta name="description" content="Landing page Sistem Informasi Jadwal Mata Kuliah">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Sistem Informasi Jadwal Mata Kuliah</h1>
-    <p>Website ini menyajikan informasi jadwal kuliah secara terstruktur dan mudah diakses.</p>
+  <header class="header">
+    <h1 class="site-title">Sistem Informasi Jadwal Mata Kuliah</h1>
+    <p class="subtitle">Website untuk menampilkan jadwal kuliah mahasiswa</p>
 
-    <nav>
-      <ul>
-        <li><a href="#overview">Overview</a></li>
-        <li><a href="#mata-kuliah">Mata Kuliah</a></li>
-        <li><a href="#jadwal">Jadwal</a></li>
-        <li><a href="#kontak">Kontak</a></li>
+    <nav class="navbar">
+      <ul class="nav-list">
+        <li><a href="#overview" class="nav-link">Overview</a></li>
+        <li><a href="#mata-kuliah" class="nav-link">Mata Kuliah</a></li>
+        <li><a href="#jadwal" class="nav-link">Jadwal</a></li>
+        <li><a href="#kontak" class="nav-link">Kontak</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
-    <section id="overview">
+  <main class="container">
+    <section id="overview" class="card">
       <h2>Overview</h2>
-      <p>Sistem Informasi Jadwal Mata Kuliah bertujuan mempermudah mahasiswa dan dosen dalam melihat serta mengelola jadwal kuliah.</p>
+      <p>Sistem ini membantu mahasiswa untuk melihat jadwal kuliah mingguan dengan mudah dan responsif.</p>
     </section>
 
-    <section id="mata-kuliah">
+    <section id="mata-kuliah" class="card">
       <h2>Daftar Mata Kuliah</h2>
-      <ul>
-        <li>Pemrograman Web</li>
-        <li>Basis Data</li>
-        <li>Struktur Data</li>
-        <li>OSRSIKOM</li>
-        <li>Aljabar Linier</li>
-        <li>Etika Profesi</li>
-        <li>Probabilitas dan Statistika</li>
-        <li>Keamanan Komputer</li>
+      <ul class="grid">
+        <li class="card card-featured">Pemrograman Web</li>
+        <li class="card card-featured">Basis Data</li>
+        <li class="card card-featured">Struktur Data</li>
+        <li class="card card-featured">Organisasi dan Arsitektur Komputer</li>
+        <li class="card card-featured">Aljabar Linier</li>
       </ul>
     </section>
 
-    <section id="jadwal">
-      <h2>Contoh Jadwal</h2>
-      <article>
-        <table border="1">
-          <caption>Ringkasan Jadwal Mingguan</caption>
-          <thead>
-            <tr>
-              <th>Hari</th>
-              <th>Waktu</th>
-              <th>Mata Kuliah</th>
-              <th>Dosen</th>
-              <th>Ruang</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Senin</td>
-              <td>08:00 - 10:00</td>
-              <td>Pemrograman Web</td>
-              <td>Dr. Siti</td>
-              <td>R.101</td>
-            </tr>
-            <tr>
-              <td>Selasa</td>
-              <td>10:00 - 12:00</td>
-              <td>Basis Data</td>
-              <td>Bapak Andi</td>
-              <td>R.202</td>
-            </tr>
-            <tr>
-              <td>Rabu</td>
-              <td>13:00 - 15:00</td>
-              <td>Struktur Data</td>
-              <td>Ibu Nina</td>
-              <td>R.103</td>
-            </tr>
-          </tbody>
-        </table>
-      </article>
+    <section id="jadwal" class="card">
+      <h2>Jadwal</h2>
+      <table class="schedule-table">
+        <thead>
+          <tr>
+            <th>Hari</th>
+            <th>Waktu</th>
+            <th>Mata Kuliah</th>
+            <th>Dosen</th>
+            <th>Ruang</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Senin</td>
+            <td>09:10 - 10:40</td>
+            <td>Pemrograman Web</td>
+            <td>Muhammad Fizriannur, S.Kom</td>
+            <td>R.101</td>
+          </tr>
+          <tr>
+            <td>Selasa</td>
+            <td>09:10 - 10:40</td>
+            <td>Basis Data</td>
+            <td>Muhammad Riduan, S.Kom</td>
+            <td>R.202</td>
+          </tr>
+          <tr>
+            <td>Rabu</td>
+            <td>09:10 - 10:40</td>
+            <td>Struktur Data</td>
+            <td>Muhammad Ikhsan, S.Kom</td>
+            <td>R.103</td>
+          </tr>
+          <tr>
+            <td>Kamis</td>
+            <td>09:10 - 10.40</td>
+            <td>Organisasi dan Arsitektur Komputer</td>
+            <td>Muhammad Kurniawan, S.Kom.,M.Kom., Ph.d., ASEAN Eng</td>
+            <td>R.306</td>
+          </tr>
+          <tr>
+            <td>Jumat</td>
+            <td>09.10 - 10.40</td>
+            <td>Aljabar Linear</td>
+            <td>Muhammad Faras, S.Kom., M.Kom</td>
+            <td>R.307</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
-    <section id="kontak">
+    <section id="kontak" class="card">
       <h2>Kontak</h2>
       <address>
         Tim Pengembang<br>
-        Email: contoh@example.com
+        Email: muhkurniawan002@gmail.com<br>
+        <a href="mailto:muhkurniawan002@gmail.com" class="btn btn-primary">Hubungi Kami</a>
       </address>
     </section>
   </main>
 
-  <footer>
+  <footer class="footer">
     <p>&copy; 2025 Sistem Informasi Jadwal Mata Kuliah</p>
-    <p>Referensi desain / bacaan:</p>
+    <p>Referensi desain:</p>
     <ul>
       <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN Web Docs</a></li>
       <li><a href="https://www.w3.org/TR/html52/" target="_blank">W3C HTML5 Specification</a></li>
-      <li><a href="https://dribbble.com/" target="_blank">Dribbble (Inspirasi desain web)</a></li>
+      <li><a href="https://dribbble.com/" target="_blank">Dribbble</a></li>
     </ul>
-
-    <p>
-      Repository GitHub: <em>isi link repo kalian di sini</em><br>
-      GitHub Pages: <em>isi link GitHub Pages di sini</em>
-    </p>
   </footer>
 </body>
 </html>
