--- a/index.html
+++ b/index.html
@@ -25,22 +25,25 @@
     <section id="overview" class="card">
       <h2>Overview</h2>
       <p>Sistem ini membantu mahasiswa untuk melihat jadwal kuliah mingguan dengan mudah dan responsif.</p>
+      <button id="toggleOverview" class="btn btn-primary">Sembunyikan Overview</button>
     </section>
 
     <section id="mata-kuliah" class="card">
       <h2>Daftar Mata Kuliah</h2>
-      <ul class="grid">
+      <ul class="grid" id="mataKuliahList">
         <li class="card card-featured">Pemrograman Web</li>
         <li class="card card-featured">Basis Data</li>
         <li class="card card-featured">Struktur Data</li>
         <li class="card card-featured">Organisasi dan Arsitektur Komputer</li>
         <li class="card card-featured">Aljabar Linier</li>
       </ul>
+      <input type="text" id="newCourse" placeholder="Tambah mata kuliah baru...">
+      <button id="addCourse" class="btn btn-primary">Tambah</button>
     </section>
 
     <section id="jadwal" class="card">
       <h2>Jadwal</h2>
-      <table class="schedule-table">
+      <table class="schedule-table" id="scheduleTable">
         <thead>
           <tr>
             <th>Hari</th>
@@ -74,20 +77,21 @@
           </tr>
           <tr>
             <td>Kamis</td>
-            <td>09:10 - 10.40</td>
+            <td>09:10 - 10:40</td>
             <td>Organisasi dan Arsitektur Komputer</td>
-            <td>Muhammad Kurniawan, S.Kom.,M.Kom., Ph.d., ASEAN Eng</td>
+            <td>Muhammad Kurniawan, S.Kom., M.Kom., Ph.d., ASEAN Eng</td>
             <td>R.306</td>
           </tr>
           <tr>
             <td>Jumat</td>
-            <td>09.10 - 10.40</td>
-            <td>Aljabar Linear</td>
+            <td>09:10 - 10:40</td>
+            <td>Aljabar Linier</td>
             <td>Muhammad Faras, S.Kom., M.Kom</td>
             <td>R.307</td>
           </tr>
         </tbody>
       </table>
+      <button id="highlightBtn" class="btn btn-primary">Highlight Jadwal Hari Ini</button>
     </section>
 
     <section id="kontak" class="card">
@@ -102,12 +106,9 @@
 
   <footer class="footer">
     <p>&copy; 2025 Sistem Informasi Jadwal Mata Kuliah</p>
-    <p>Referensi desain:</p>
-    <ul>
-      <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN Web Docs</a></li>
-      <li><a href="https://www.w3.org/TR/html52/" target="_blank">W3C HTML5 Specification</a></li>
-      <li><a href="https://dribbble.com/" target="_blank">Dribbble</a></li>
-    </ul>
+    <button id="darkModeToggle" class="btn">🌙 Dark Mode</button>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
